--- a/components/photo_title/templates/photo_title.html
+++ b/components/photo_title/templates/photo_title.html
@@ -1,12 +1,8 @@
-<!doctype html>
-<html>
-    <head>
-        <title>photos</title>
-        <link rel="stylesheet" href="/group1/components/photo_title/static/css/photo_title.css">
-    </head>
+
+
+        <link rel="stylesheet" href="{{ url_for('photo_title.css', filename='static/photo_title.css') }}">
     <body>
         <div class="container">
             <div class="title"><div class="bg-text">כותרת</div></div>
         </div>
     </body>
-</html>
