--- a/components/footer/templates/footer.html
+++ b/components/footer/templates/footer.html
@@ -1,36 +1,27 @@
-<!doctype html>
-<html>
-    <head>
-        <title>Footer</title>
-        <link rel="stylesheet" href="/group1/components/footer/static/css/footer.css">
-    </head>
-    <body>
-        <footer>
-            <div class="links">
-                <div class="footer-part">
-                    <a class="op" href="/group1/pages/qa/templates/qa.html">שאלות נפוצות</a>
-                    <a class="op" href="/group1/pages/contact us/templates/contact_us.html">צור קשר</a>
-                    <a class="op" href="/group1/pages/terms_of_use/templates/terms_of_use.html">תקנון</a>
-                </div>
+{% set page_head_title = 'footer' %}
+<footer>
+    <div class="links">
+        <div class="footer-part">
+            <a class="op" href="{{ url_for('qa.html', filename='templates/qa.html') }}">שאלות נפוצות</a>
+            <a class="op" href="{{ url_for('contact_us.html', filename='templates/contact_us.html') }}">צור קשר</a>
+            <a class="op" href="{{ url_for('terms_of_use.html', filename='templates/terms_of_use.html') }}">תקנון</a>
+        </div>
 
-                <div class="footer-part">
-                    <a class="op" href="/group1/pages/who we are/templates/who_we_are.html">מי אנחנו</a>
-                    <p class="Ftitle">אמצעי תשלום</p>
-                    <img class="payment" src="/group1/components/footer/static/img/paypal.png" alt="paypal"/>
-                    <img class="payment" src="/group1/components/footer/static/img/mastercard.png" alt="mastercard"/>
-                    <img class="payment" src="/group1/components/footer/static/img/visa.png" alt="visa"/>
-                    <img class="payment" src="/group1/components/footer/static/img/american-express.png" alt="american-express"/>
-                </div>
+        <div class="footer-part">
+            <a class="op" href="{{ url_for('who_we_are.html', filename='templates/who_we_are.html') }}">מי אנחנו</a>
+            <p class="Ftitle">אמצעי תשלום</p>
+            <img class="payment" src="/group1/components/footer/static/img/paypal.png" alt="paypal"/>
+            <img class="payment" src="/group1/components/footer/static/img/mastercard.png" alt="mastercard"/>
+            <img class="payment" src="/group1/components/footer/static/img/visa.png" alt="visa"/>
+            <img class="payment" src="/group1/components/footer/static/img/american-express.png" alt="american-express"/>
+        </div>
 
-                <div class="footer-part">
-                    <p class="Ftitle">שירות לקוחות</p>
-                    <div class="contactDetails">
-                        <a class="op" href="tel:054-6798654">054-6798654</a>
-                        <a class="op" href="mailto:bmine@gmail.com">bmine@gmail.com</a> 
-                    </div>
-                </div>
+        <div class="footer-part">
+            <p class="Ftitle">שירות לקוחות</p>
+            <div class="contactDetails">
+                <a class="op" href="tel:054-6798654">054-6798654</a>
+                <a class="op" href="mailto:bmine@gmail.com">bmine@gmail.com</a>
             </div>
-        </footer>
-
-    </body>
-</html>
+        </div>
+    </div>
+</footer>
